--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <title>cars</title>
+    <link rel="icon" href="http://example.com/favicon.png">
 
 <body style="background-color:lightblue">
     <header>
