--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="background-color:lightblue; font-family:sans-serif">
     <header style="background-color:LavenderBlush">>
         <h1 style="text-align:center">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Toyota_EU.svg/2560px-Toyota_EU.svg.png" height="30px"">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Toyota_EU.svg/2560px-Toyota_EU.svg.png" height="30px">
             <b>Автомобілі</b>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Ford_logo_flat.svg/2560px-Ford_logo_flat.svg.png" height="30px">
         </h1>
@@ -80,7 +80,7 @@
         <p><b><i>61000, Харківська область, місто Харків, вулиця Автомобільна, будинок №32</i></b> </p>
         <p><b><i>email:cars@gmail.com</i></b> </p>
         <p><b><i>телефон: 0500001234</i></b> </p>
-        <p> <a href="https://www.instagram.com"><img src="https://drive.google.com/file/d/1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj/view?usp=drive_link"></a>
+        <p> <a href="https://www.instagram.com"><img src="https://drive.google.com/file/d/1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj/view" height="30px"/></a>
         </p>
     </footer>
 </body>
