--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <p><b><i>61000, Харківська область, місто Харків, вулиця Автомобільна, будинок №32</i></b> </p>
         <p><b><i>email:cars@gmail.com</i></b> </p>
         <p><b><i>телефон: 0500001234</i></b> </p>
-        <p> <a href="https://www.instagram.com"><img src="https://drive.google.com/file/d/1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj/view" height="30px"/></a>
+        <p> <a href="https://www.instagram.com"> <img src="https://drive.google.com/thumbnail?id=1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj" height="40px">
+            </a>
         </p>
     </footer>
 </body>
