--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             появи в 1948 році компанія продала понад 27,5 мільйона пікапів F-серії в усьому світі, що робить його
             найуспішнішою моделлю Форда і дозволяє займати 3-те місце у списку найбільш продаваних автомобілів світу.
         </p>
-        <table style="border:2px solid green;text-align:center;background-color:white;font-size:20px">
+        <table style="border:2px solid green;text-align:center;background-color:yellow;font-size:20px">
             <tr>
                 <td style="border:1px solid green"><b>№ п/п</b></td>
                 <td style="border:1px solid green"><b>Марка авто</b></td>
