--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <html>
 <title>cars</title>
-<link rel="icon" href="http://example.com/favicon.png">
+<link rel="stylesheet" href="style.css">
 
-<body style="background-color:lightblue; font-family:sans-serif">
-    <header style="background-color:LavenderBlush">>
-        <h1 style="text-align:center">
+<body>
+    <header>
+        <h1>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Toyota_EU.svg/2560px-Toyota_EU.svg.png" height="30px">
             <b>Автомобілі</b>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Ford_logo_flat.svg/2560px-Ford_logo_flat.svg.png" height="30px">
         </h1>
-        <h2 style="text-align:center;font-size:50px"> <i>Найпопулярніші автомобілі<br/> у світі за 2023 рік </i></h2>
-        <h4 style="text-align:center">
-            <a href="#ToyotaCorolla" style="font-size:25px;color:DarkRed">Toyota Corolla</a>
-            <a href="#ToyotaRAV4" style="font-size:25px;color:DarkRed">Toyota RAV4</a>
-            <a href="#FordF-Series" style="font-size:25px;color:DarkRed">Ford F-Series</a>
+        <h2> <b><i>Найпопулярніші автомобілі<br/> у світі за 2023 рік </i></b></h2>
+        <h4>
+            <a href="#ToyotaCorolla">Toyota Corolla</a>
+            <a href="#ToyotaRAV4">Toyota RAV4</a>
+            <a href="#FordF-Series">Ford F-Series</a>
         </h4>
     </header>
     <main>
 
-        <p style="font-size:40px;text-align:center"><b><i> Найбільший попит мають моделі підвищеної прохідності:</i></b>
-        </p>
+        <h2><b><i> Найбільший попит мають моделі підвищеної прохідності:</i></b>
+        </h2>
 
         <h1 id="ToyotaCorolla"><i>Toyota Corolla</i></h1>
         <img width="500px" src="https://images.toyota-europe.com/ua/product-token/ab2033fc-ad38-450b-a67a-3232c6477035/vehicle/ad5f8a81-ea04-4cf6-8ad8-329adeb0bdcd/width/1480/height/650/exterior-33_040.jpg"/>
-        <p style="font-size:20px;color:brown"> <b>Toyota Corolla</b> — автомобілі компактного класу, що виробляються
+        <p> <b>Toyota Corolla</b> — автомобілі компактного класу, що виробляються
             корпорацією
             Toyota з 1966 року.<br/>Обсяг
             випуску більше 32 мільйонів.<br/> І ця рекордна цифра продажів, занесена до Книги рекордів Гіннесса.</p>
@@ -32,57 +32,57 @@
 
         <h1 id="ToyotaRAV4"><i>Toyota RAV4</i></h1>
         <img width="500px" src="https://d8a6a33f-3369-444b-9b5f-793c13ff0708.selcdn.net/uploads/projects/toyota_tradedealer/uploads/images/ext-front_tcm-3020-1767644.png"/>
-        <p style="font-size:20px;color:brown"><b>Toyota RAV4</b> — компактний повноприводний автомобіль класу SUV.<br/>
+        <p><b>Toyota RAV4</b> — компактний повноприводний автомобіль класу SUV.<br/>
             Запущений у виробництво в Японії в 1994
             році.<br/> Автомобіль поєднує в собі переваги позашляховиків, такі як повний привід і підвищену
             вантажопідйомність, і переваги малих седанів, такі як маневреність і невеликі витрати палива.</p>
 
         <h1 id="FordF-Series"><i>Ford F-Series</i></h1>
         <img width="500px" src="https://media.ed.edmunds-media.com/ford/f-150/2024/oem/2024_ford_f-150_crew-cab-pickup_lariat_fq_oem_1_1600.jpg"/>
-        <p style="font-size:20px;color:brown"><b>Перший пікап Ford F-серії</b> — одна з найуспішніших моделей в історії
+        <p><b>Перший пікап Ford F-серії</b> — одна з найуспішніших моделей в історії
             компанії Ford.<br/> З моменту своєї
             появи в 1948 році компанія продала понад 27,5 мільйона пікапів F-серії в усьому світі, що робить його
             найуспішнішою моделлю Форда і дозволяє займати 3-те місце у списку найбільш продаваних автомобілів світу.
         </p>
-        <table style="border:2px solid green;text-align:center;background-color:yellow;font-size:20px">
+        <table>
             <tr>
-                <td style="border:1px solid green"><b>№ п/п</b></td>
-                <td style="border:1px solid green"><b>Марка авто</b></td>
-                <td style="border:1px solid green"><b>Виробник</b></td>
-                <td style="border:1px solid green"><b>Рік випуску</b></td>
-                <td style="border:1px solid green"><b>Вартість, грн.</b></td>
+                <td><b>№ п/п</b></td>
+                <td><b>Марка авто</b></td>
+                <td><b>Виробник</b></td>
+                <td><b>Рік випуску</b></td>
+                <td><b>Вартість, грн.</b></td>
 
             </tr>
             <tr>
-                <td style="border:1px solid green">1.</td>
-                <td style="border:1px solid green">Toyota Corolla</td>
-                <td style="border:1px solid green">Toyota,Японія</td>
-                <td style="border:1px solid green">з 1966</td>
-                <td style="border:1px solid green">883 905-1 054 515</td>
+                <td>1.</td>
+                <td>Toyota Corolla</td>
+                <td>Toyota,Японія</td>
+                <td>з 1966</td>
+                <td>883 905-1 054 515</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">2.</td>
-                <td style="border:1px solid green">Toyota RAV4</td>
-                <td style="border:1px solid green">Toyota,Японія</td>
-                <td style="border:1px solid green">з 1994</td>
-                <td style="border:1px solid green">1 383 564-1 526 252</td>
+                <td>2.</td>
+                <td>Toyota RAV4</td>
+                <td>Toyota,Японія</td>
+                <td>з 1994</td>
+                <td>1 383 564-1 526 252</td>
             </tr>
             <tr>
-                <td style="border:1px solid green">3.</td>
-                <td style="border:1px solid green">Ford F-Series</td>
-                <td style="border:1px solid green">Ford Motor Company,Америка</td>
-                <td style="border:1px solid green">з 1948</td>
-                <td style="border:1px solid green">3 385 560-5 325 600</td>
+                <td>3.</td>
+                <td>Ford F-Series</td>
+                <td>Ford Motor Company,Америка</td>
+                <td>з 1948</td>
+                <td>3 385 560-5 325 600</td>
             </tr>
         </table>
     </main>
-    <footer style=";background-color:LavenderBlush">
-        <p><b><i>61000, Харківська область, місто Харків, вулиця Автомобільна, будинок №32</i></b> </p>
-        <p><b><i>email:cars@gmail.com</i></b> </p>
-        <p><b><i>телефон: 0500001234</i></b> </p>
-        <p> <a href="https://www.instagram.com"> <img src="https://drive.google.com/thumbnail?id=1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj" height="40px">
-            </a>
-        </p>
+    <footer>
+        <h5><b><i>61000, Харківська область, місто Харків, вулиця Автомобільна, будинок №32</i></b></h5>
+        <h5><b><i>email:cars@gmail.com</i></b></h5>
+        <h5> <b><i>телефон: 0500001234</i></b> </h5>
+        <a href="https://www.instagram.com"> <img src="https://drive.google.com/thumbnail?id=1x9JpuoUK7kLrxzAKC91HwBhkkkKC3wkj" height="40px">
+        </a>
+
     </footer>
 </body>
 
